frame/support/test/tests/pallet_ui/interface_invalid_item.stderr
error[E0107]: wrong number of type arguments: expected 1, found 0
  --> $DIR/interface_invalid_item.rs:12:18
   |
12 |     impl<T: Config> Interface for Pallet<T> {}
   |                     ^^^^^^^^^ expected 1 type argument
